changed the deploy

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://MrDevashish21.github.io/my-recipe-app",
+  "homepage": "https://mrdevashish21.github.io/my-recipe-app/",
   "name": "my-recipe-app",
   "version": "0.1.0",
   "private": true,
